Agent query: Can you see the main page with the welcome message and navigation sidebar?
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/b07f405f-2c9d-4b47-aaad-7c0df753b443/ecdb3d47-d720-4bbd-a20b-aaefa11620fe.jpg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ requires-python = ">=3.11"
 dependencies = [
     "google-api-python-client>=2.161.0",
     "google-auth>=2.38.0",
+    "numpy>=2.2.3",
     "pandas>=2.2.3",
     "streamlit>=1.42.1",
+    "trafilatura>=2.0.0",
     "twilio>=9.4.5",
 ]
