Agent query: Can you check if both the Alerts and Signals pages are now accessible and working correctly?
Fix: Address `AttributeError` by initializing `st.session_state` for persistent settings on Alerts and Signals pages; add default settings if none are loaded.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/b07f405f-2c9d-4b47-aaad-7c0df753b443/3e7a026e-3d6f-4d27-a8c2-39e4a780c1af.jpg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "google-api-python-client>=2.161.0",
     "google-auth>=2.38.0",
     "numpy>=2.2.3",
+    "openai>=1.63.2",
     "pandas>=2.2.3",
     "streamlit>=1.42.1",
     "trafilatura>=2.0.0",
