Agent query: I've fixed the Signals page import error. Could you check if the Signals page is now loading correctly and if the Market Symbols import button is working?
Fix: Resolved error importing Signals page in Streamlit app; added psycopg2-binary dependency for database interaction.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/b07f405f-2c9d-4b47-aaad-7c0df753b443/623a056b-c444-411e-bf74-50f0fa24d6da.jpg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=2.2.3",
     "openai>=1.63.2",
     "pandas>=2.2.3",
+    "psycopg2-binary>=2.9.10",
     "streamlit>=1.42.1",
     "trafilatura>=2.0.0",
     "twilio>=9.4.5",
